--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>mybatisplus</module>
         <module>es</module>
         <module>rabbitmq</module>
+        <module>rabbitMq2</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
