--- a/rabbitmq/src/main/resources/application.yml
+++ b/rabbitmq/src/main/resources/application.yml
@@ -16,4 +16,14 @@ spring:
     #确认消息已发送到队列(Queue)
     publisher-returns: true
 
+    #这个配置是针对消息消费端的配置
+    listener:
+      simple:
+        retry:
+          enabled: true  #是否开启消费者重试（为false时关闭消费者重试，这时消费端代码异常会一直重复收到消息）
+          max-attempts: 5  #最大重试次数
+          initial-interval: 1000 #重试间隔时间（单位毫秒）
+          max-interval: 10000  #重试最大时间间隔（单位毫秒）
+          multiplier: 1 #应用于前一重试间隔的乘法器。
+
 
