--- a/adminServer/pom.xml
+++ b/adminServer/pom.xml
@@ -9,20 +9,23 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>es</artifactId>
+    <artifactId>adminServer</artifactId>
 
     <dependencies>
-        <!-- Spring Default -->
+        <!-- spring-boot-admin 服务端的jar -->
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-server</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+
+
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
-        <!-- elasticsearch启动器 (必须)-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
-        </dependency>
-
     </dependencies>
 </project>
