--- a/rabbitmq/pom.xml
+++ b/rabbitmq/pom.xml
@@ -24,5 +24,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
+
+
+        <!--  spring-boot-admin 客户端的jar -->
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
     </dependencies>
 </project>
