--- a/adminServer/src/main/resources/application.yml
+++ b/adminServer/src/main/resources/application.yml
@@ -1,10 +1,8 @@
 server:
   port: 9085
-#  servlet:
-#    context-path: /admin/
+
 spring:
-  application:
-    name: adminserver
-#  boot:
-#    admin:
-#      context-path: /server
+  boot:
+    admin:
+      context-path: monitor
+
