--- a/rabbitmq/src/main/resources/application.yml
+++ b/rabbitmq/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
         instance:
           prefer-ip: true
         url: http://10.12.14.163:9085
-        service-base-url: http://10.12.14.163：9083
+        service-base-url: http://10.12.14.163:9083
 #spring.boot.admin.client.instance.prefer-ip=true
 #spring.boot.admin.client.service-base-url=http://10.12.14.163:9083
 #management.endpoint.health.show-details=ALWAYS
@@ -25,7 +25,8 @@ management:
 
 
   rabbitmq:
-    host: localhost
+    host: 10.12.14.155
+    port: 5672
     username: guest
     password: guest
     #虚拟host 可以不设置,使用server默认host
