--- a/adminServer/pom.xml
+++ b/adminServer/pom.xml
@@ -18,9 +18,17 @@
             <artifactId>spring-boot-admin-starter-server</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-server-ui</artifactId>
+            <version>2.1.0</version>
+        </dependency>
 
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
 
         <dependency>
