--- a/rabbitMq2/src/main/resources/application.yml
+++ b/rabbitMq2/src/main/resources/application.yml
@@ -9,12 +9,12 @@ spring:
   boot:
     admin:
       client:
-        url: http://localhost:9085/monitor
-        username: root
-        password: root
+        url: http://localhost:9085
+        username: zhupeng
+        password: zhupeng123
         instance:
           service-base-url: http://localhost:9084
-          name: mq2
+
 management:
   endpoints:
     web:
@@ -31,13 +31,14 @@ management:
     database: 0
     host: localhost
     port: 6379
-    password:
+    password: zhupeng
 
 
 
   rabbitmq:
     host: 10.12.14.155
     port: 5672
+    username: guest
     password: guest
     #虚拟host 可以不设置,使用server默认host
 #    virtual-host: JCcccHost
