--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>rabbitmq</module>
         <module>rabbitMq2</module>
         <module>adminServer</module>
+        <module>springboot-zipkin</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
